--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -121,8 +121,8 @@
                 // Inicializar DataTable dentro de la función success
                 $('#tabla-cursos').DataTable({
                     "data": cursos,
-                    "paging": false,
-                    "info": false,
+                    "paging": true,
+                    "info": true,
                     "responsive": true,
                     "rowReorder": {
                         "selector": 'td:nth-child(2)'
