--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -128,6 +128,26 @@
 									class="align-middle">Horarios</span>
 							</a>
 						</li>
+
+						<!-- <li class="sidebar-item">				
+							<div class="accordion accordion-flush" id="accordionFlushExample">
+								<div class="accordion-item">
+									<h2 class="accordion-header">
+									  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+										Horarios
+									  </button>
+									</h2>
+									<div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+									  <div class="accordion-body">
+										<ul class="list-group">
+											<li class="list-group-item list-group-item-action">Horarios por docente</li>
+											<li class="list-group-item list-group-item-action">Horarios por curso</li>
+										  </ul>
+									  </div>
+									</div>
+								  </div>
+							</div>
+						</li> -->
 					</ul>
 
 
