--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -129,6 +129,13 @@
 							</a>
 						</li>
 
+						<li class="sidebar-item">
+							<a class="sidebar-link" href="{{url_for('horarios_por_docente')}}">
+								<i class="align-middle" data-feather="align-left"></i> <span
+									class="align-middle">Horarios por docente</span>
+							</a>
+						</li>
+
 						<!-- <li class="sidebar-item">				
 							<div class="accordion accordion-flush" id="accordionFlushExample">
 								<div class="accordion-item">
