--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -259,9 +259,11 @@
                         <div class="form-group row d-flex justify-content-center">
                             <label for="input_docente" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Docente:</label>
                             <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
-                                <input type="text" class="form-control texto-input" id="input_docente" placeholder="">
+                                <!-- Utiliza un input de tipo "search" -->
+                                <input type="search" class="form-control texto-input" id="input_docente" placeholder="Buscar docente...">
+                                <!-- Contenedor para mostrar las sugerencias -->
+                                <div id="sugerencias-container" class="sugerencias-container"></div>
                             </div>
-
                         </div>
                     </div>
                     <div class="col-md-2 order-md-2 order-sm-1  d-flex justify-content-center align-items-center">
@@ -336,14 +338,42 @@
         tabla.insertAdjacentHTML("beforeend", fila);
     });
 
-    
+    let listaDatos = [];
+
+    function obtenerDatos() {
+        fetch('/get_personas_activas')
+            .then(response => response.json())
+            .then(data => {
+                listaDatos = data;
+                
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    }
+
+    obtenerDatos();
+
+    function buscarElementos(texto) {
+        texto = texto.trim().toLowerCase();
+        return listaDatos.filter(elemento => {
+        let nombreCompleto = elemento.trim().toLowerCase();
+        return nombreCompleto.includes(texto);
+    });
+    }
+
     input_docente.addEventListener('keypress',function(event){
         if (event.key=='Enter'){
             if (input_docente.value === ''){
                 mostrarAlerta("warning","No se pudo encontrar el docente","Por favor ingrese el nombre o nombres de los docentes");
+            }else{
+                var textoBusqueda = event.target.value;
+                var resultados = buscarElementos(textoBusqueda);
+                alert(resultados)
             }
         }
     });
+
 
 </script>
 
