--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -22,6 +22,9 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 	<link rel="stylesheet" href="https://cdn.datatables.net/rowreorder/1.5.0/css/rowReorder.bootstrap5.css">
 	<link rel="stylesheet" href="https://cdn.datatables.net/responsive/3.0.2/css/responsive.bootstrap5.css">
+	<script src="/static/js/autocomplete-0.3.0.js"></script>
+    <script src="/static/js/jquery-1.8.2.min.js"></script>
+    <link rel="stylesheet" href="/static/css/autocomplete-0.3.0.css">
 
 	<style>
 		.loader-wrapper {
